--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "styled-components": "^6.0.7",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
