--- a/daily-diet/package.json
+++ b/daily-diet/package.json
@@ -12,12 +12,19 @@
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "~18.2.14",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.48.0",
     "typescript": "^5.1.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "private": true
 }
