--- a/daily-diet/package.json
+++ b/daily-diet/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito-sans": "^0.2.3",
     "expo": "~49.0.8",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -22,9 +24,6 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.48.0",
     "typescript": "^5.1.3"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   },
   "private": true
 }
