--- a/daily-diet/package.json
+++ b/daily-diet/package.json
@@ -15,10 +15,12 @@
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
