--- a/daily-diet/package.json
+++ b/daily-diet/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@hookform/resolvers": "^3.3.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
@@ -17,11 +18,13 @@
     "expo-status-bar": "~1.6.0",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
