--- a/daily-diet/tsconfig.json
+++ b/daily-diet/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "@utils/*": [
         "./src/utils/*"
+      ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
       ]
     }
   }
