Showing data on meals registered in the SectionList

--- a/daily-diet/tsconfig.json
+++ b/daily-diet/tsconfig.json
@@ -28,6 +28,9 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
+      "@dtos/*": [
+        "src/dtos/*"
+      ],
       "@contexts/*": [
         "./src/contexts/*"
       ]
