--- a/daily-diet/package.json
+++ b/daily-diet/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
     "@hookform/resolvers": "^3.3.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
