--- a/daily-diet/app.json
+++ b/daily-diet/app.json
@@ -21,14 +21,15 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#fafafa"
-      }
+      },
+      "package": "com.rpsouza.dailydiet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "54863a4e-cb00-4b43-a924-2a8beb0994a9"
+        "projectId": ""
       }
     }
   }
