multiline and app change name

--- a/daily-diet/app.json
+++ b/daily-diet/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "daily-diet",
+    "name": "Daily diet",
     "slug": "daily-diet",
     "version": "1.0.0",
     "orientation": "portrait",
