--- a/marketspace/package.json
+++ b/marketspace/package.json
@@ -16,6 +16,7 @@
     "expo": "~50.0.4",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-svg": "13.4.0"
