--- a/marketspace/package.json
+++ b/marketspace/package.json
@@ -17,7 +17,7 @@
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-svg": "14.1.0"
   },
   "devDependencies": {
