--- a/marketspace/package.json
+++ b/marketspace/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
+    "@hookform/resolvers": "^3.3.4",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-svg": "14.1.0"
+    "react-native-svg": "14.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
