--- a/marketspace/package.json
+++ b/marketspace/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
@@ -20,6 +22,7 @@
     "react-hook-form": "^7.50.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "zod": "^3.22.4"
   },
