--- a/marketspace/package.json
+++ b/marketspace/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@hookform/resolvers": "^3.3.4",
+    "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
